# 21021IIA

./: 1802925EFolioA  1802925EFolioA.cpp  1802925EFolioA_old  1802925EFolioA_old.cpp  1802925EfolioA.cpp  CMakeLists.txt  JogoDoGalo.cpp  JogoDoGalo.h  OitoDamas.cpp  Particao.h  ProcuraEngine  Puzzle8.cpp  Puzzle8.h  README.md  TProcuraAdversa.cpp  TProcuraConstrutiva.cpp  TProcuraConstrutivaComCiclos.h  TProcuraMelhorativa.h  TVector.h  Versao6Silvana  Versao6Silvana.cpp  silvana.cpp  testeFolio.py  xerife2  xerife2.cpp  xerifes  xerifes.cpp
1802925EFolioA.dSYM/Contents/: Info.plist
1802925EFolioA.dSYM/Contents/Resources/DWARF/: 1802925EFolioA
1802925EFolioA.dSYM/Contents/Resources/Relocations/aarch64/: 1802925EFolioA.yml
1802925EFolioA_old.dSYM/Contents/: Info.plist
1802925EFolioA_old.dSYM/Contents/Resources/DWARF/: 1802925EFolioA_old
1802925EFolioA_old.dSYM/Contents/Resources/Relocations/aarch64/: 1802925EFolioA_old.yml
DiogoAlgoritmos/: JogoDoGalo.cpp  JogoDoGalo.h  OitoDamas.cpp  OitoDamas.h  Particao.cpp  ProcuraEngine  ProcuraEngine.cpp  Puzzle8.cpp  Puzzle8.h  TProcuraAdversa.h  TProcuraConstrutiva.h  TProcuraConstrutivaComCiclos.cpp  TProcuraMelhorativa.cpp  TRand.cpp  TRand.h
output/: Puzzle8
xerifes.dSYM/Contents/: Info.plist
xerifes.dSYM/Contents/Resources/DWARF/: xerifes
xerifes.dSYM/Contents/Resources/Relocations/aarch64/: xerifes.yml
